--- a/.rustfmt.toml
+++ b/.rustfmt.toml
@@ -1,3 +1,3 @@
-# please do not use rustfmt, it destroys well-formatted code
-disable_all_formatting = true
-ignore = ["/"]
+group_imports = "StdExternalCrate"
+imports_granularity = "Crate"
+use_field_init_shorthand = true
