chore: fix clippy warnings

--- a/security-framework-sys/Cargo.toml
+++ b/security-framework-sys/Cargo.toml
@@ -29,4 +29,4 @@ OSX_10_15 = ["OSX_10_14"]
 targets = ["x86_64-apple-darwin", "aarch64-apple-ios"]
 
 [badges]
-maintenance = { status = "looking-for-maintainer" }
+maintenance = { status = "passive-maintainance" }
