--- a/security-framework/Cargo.toml
+++ b/security-framework/Cargo.toml
@@ -61,4 +61,4 @@ name = "set_internet_password"
 targets = ["x86_64-apple-darwin", "aarch64-apple-ios"]
 
 [badges]
-maintenance = { status = "looking-for-maintainer" }
+maintenance = { status = "passive-maintainance" }
