--- a/iostest/Cargo.toml
+++ b/iostest/Cargo.toml
@@ -1,8 +1,9 @@
 [package]
 name = "iostest"
 version = "0.1.0"
-edition = "2018"
 publish = false
+edition = "2021"
+rust-version = "1.60"
 
 [lib]
 crate-type = ["staticlib"]
