--- a/security-framework-sys/Cargo.toml
+++ b/security-framework-sys/Cargo.toml
@@ -10,6 +10,7 @@ readme = "README.md"
 keywords = ["ffi", "iOS", "TLS", "SSL", "crypto"]
 categories = ["os::macos-apis", "external-ffi-bindings"]
 edition = "2021"
+rust-version = "1.60"
 
 [dependencies]
 core-foundation-sys = "0.8.3"
