--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -42,6 +42,7 @@ jobs:
         run: |
           cargo update -p=time --precise=0.3.17
           cargo update -p=is-terminal --precise=0.4.7
+          cargo update -p=dashmap --precise=5.4.0
 
       - name: Run cargo test
         run: cargo test --workspace --all-features
