--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -31,7 +31,7 @@ jobs:
       - name: Checkout sources
         uses: actions/checkout@v2
 
-      - name: Install stable toolchain
+      - name: Install Rust (${{ matrix.rust }})
         uses: actions-rust-lang/setup-rust-toolchain@v1.5.0
         with:
           toolchain: ${{ matrix.rust }}
@@ -57,10 +57,9 @@ jobs:
       - name: Checkout sources
         uses: actions/checkout@v3
 
-      - name: Install stable toolchain
+      - name: Install Rust
         uses: actions-rust-lang/setup-rust-toolchain@v1.5.0
         with:
-          toolchain: stable
           target: aarch64-apple-ios
 
       - name: Run check
@@ -73,10 +72,9 @@ jobs:
       - name: Checkout sources
         uses: actions/checkout@v3
 
-      - name: Install stable toolchain
-        uses: dtolnay/rust-toolchain@v1
+      - name: Install Rust
+        uses: actions-rust-lang/setup-rust-toolchain@v1.5.0
         with:
-          toolchain: stable
           target: aarch64-apple-darwin
       - name: Run check
         run: cargo check -p=security-framework --target=aarch64-apple-darwin --all-features
