--- a/security-framework/Cargo.toml
+++ b/security-framework/Cargo.toml
@@ -2,30 +2,22 @@
 name = "security-framework"
 version = "2.9.2"
 authors = ["Steven Fackler <sfackler@gmail.com>", "Kornel <kornel@geekhood.net>"]
-license = "MIT OR Apache-2.0"
-description = "Security.framework bindings for macOS and iOS"
-repository = "https://github.com/kornelski/rust-security-framework"
+description = "Apple `Security.framework` bindings for macOS and iOS"
 categories = ["os::macos-apis", "cryptography", "api-bindings"]
 keywords = ["iOS", "TLS", "SSL", "crypto", "keychain"]
+repository = "https://github.com/kornelski/rust-security-framework"
+license = "MIT OR Apache-2.0"
 exclude = ["test/*"]
 edition = "2021"
 rust-version = "1.60"
 
-[dependencies]
-security-framework-sys = { version = "2.9", default-features = false, path = "../security-framework-sys" }
-core-foundation = "0.9.3"
-core-foundation-sys = "0.8.3"
-bitflags = "2"
-libc = "0.2.139"
-log = { version = "0.4.17", optional = true }
-num-bigint = { version = "0.4.3", optional = true }
+[package.metadata.docs.rs]
+all-features = true
+rustdoc-args = ["--cfg", "docsrs"]
+targets = ["x86_64-apple-darwin", "aarch64-apple-ios"]
 
-[dev-dependencies]
-env_logger = "0.10"
-hex = "0.4"
-time = "0.3.17"
-tempfile = "3.3"
-x509-parser = "0.15"
+[badges]
+maintenance = { status = "passive-maintainance" }
 
 [features]
 default = ["OSX_10_9"]
@@ -45,17 +37,18 @@ OSX_10_15 = ["OSX_10_14", "security-framework-sys/OSX_10_15"]
 
 nightly = [] # not used, doesn't do anything, only for back compat
 
-[[example]]
-name = "client"
+[dependencies]
+security-framework-sys = { version = "2.9", default-features = false, path = "../security-framework-sys" }
+core-foundation = "0.9.3"
+core-foundation-sys = "0.8.3"
+bitflags = "2"
+libc = "0.2.139"
+log = { version = "0.4.17", optional = true }
+num-bigint = { version = "0.4.3", optional = true }
 
-[[example]]
-name = "find_internet_password"
-
-[[example]]
-name = "set_internet_password"
-
-[package.metadata.docs.rs]
-targets = ["x86_64-apple-darwin", "aarch64-apple-ios"]
-
-[badges]
-maintenance = { status = "passive-maintainance" }
+[dev-dependencies]
+env_logger = "0.10"
+hex = "0.4"
+time = "0.3.17"
+tempfile = "3.3"
+x509-parser = "0.15"
