--- a/systest/Cargo.toml
+++ b/systest/Cargo.toml
@@ -8,18 +8,18 @@ rust-version = "1.60"
 
 [dependencies]
 core-foundation-sys = "0.8.3"
-security-framework-sys = { path = "../security-framework-sys" }
+apple-security-framework-sys = { path = "../security-framework-sys" }
 libc = "0.2.139"
 
 [build-dependencies]
 ctest = "0.2.22"
 
 [features]
-OSX_10_9 = ["security-framework-sys/OSX_10_9"]
-OSX_10_10 = ["OSX_10_9", "security-framework-sys/OSX_10_10"]
-OSX_10_11 = ["OSX_10_10", "security-framework-sys/OSX_10_11"]
-OSX_10_12 = ["OSX_10_11", "security-framework-sys/OSX_10_12"]
-OSX_10_13 = ["OSX_10_12", "security-framework-sys/OSX_10_13"]
+OSX_10_9 = ["apple-security-framework-sys/OSX_10_9"]
+OSX_10_10 = ["OSX_10_9", "apple-security-framework-sys/OSX_10_10"]
+OSX_10_11 = ["OSX_10_10", "apple-security-framework-sys/OSX_10_11"]
+OSX_10_12 = ["OSX_10_11", "apple-security-framework-sys/OSX_10_12"]
+OSX_10_13 = ["OSX_10_12", "apple-security-framework-sys/OSX_10_13"]
 
 [package.metadata.release]
 release = false
