ci: run systest

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -50,6 +50,9 @@ jobs:
       - name: Run cargo test
         run: cargo test --workspace --all-features
 
+      - name: Run systest
+        run: cargo run -p=systest
+
       - name: Check default features
         run: cargo check --workspace
 
