build: lint yml

--- a/.prettierrc.yml
+++ b/.prettierrc.yml
@@ -3,3 +3,6 @@ overrides:
     options:
       proseWrap: never
       printWidth: 9999
+  - files: '**/*.{yml,yaml}'
+    options:
+      singleQuote: true
