test: skip tests for type aliases causing issues

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -10,6 +10,7 @@
         "cfstring",
         "cfurl",
         "cstring",
+        "ctest",
         "dlsym",
         "dtls",
         "epipe",
@@ -19,6 +20,7 @@
         "libc",
         "libcurl",
         "ocsp",
+        "oids",
         "osstatus",
         "recieved",
         "repr",
