--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -66,7 +66,7 @@ jobs:
           target: aarch64-apple-ios
 
       - name: Run check
-        run: cargo check -p=apple-security-framework --target=aarch64-apple-ios --all-features
+        run: cargo check -p=security-framework --target=aarch64-apple-ios --all-features
 
   apple-silicon:
     name: Check Apple Silicon
@@ -81,4 +81,4 @@ jobs:
           target: aarch64-apple-darwin
 
       - name: Run check
-        run: cargo check -p=apple-security-framework --target=aarch64-apple-darwin --all-features
+        run: cargo check -p=security-framework --target=aarch64-apple-darwin --all-features
