--- a/security-framework-sys/Cargo.toml
+++ b/security-framework-sys/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "apple-security-framework-sys"
+name = "security-framework-sys"
 version = "2.9.1"
 authors = [
     "Steven Fackler <sfackler@gmail.com>",
@@ -9,7 +9,7 @@ authors = [
 description = "Apple `Security.framework` low-level FFI bindings"
 categories = ["os::macos-apis", "external-ffi-bindings"]
 keywords = ["ffi", "iOS", "TLS", "SSL", "crypto"]
-repository = "https://github.com/x52dev/apple-security-framework"
+repository = "https://github.com/x52dev/security-framework"
 license = "MIT OR Apache-2.0"
 edition = "2021"
 rust-version = "1.60"
